# certbot-dns-safedns

./: .gitignore  .gitlab-ci.yml  AGENTS.md  Dockerfile  README.md  local-oldest-requirements.txt  pyproject.toml  requirements.txt  safedns.ini  setup.py
.github/: dependabot.yml
.github/workflows/: deployment.yml  release.yml  tag.yml  test.yml
certbot_dns_safedns/: dns_safedns.py  dns_safedns_test.py
